--- a/roles/clearml/tasks/install_redhat.yml
+++ b/roles/clearml/tasks/install_redhat.yml
@@ -5,7 +5,7 @@
     name: "*"
     state: latest
 
-- name: install python on Ubuntu and family
+- name: install python on Redhat and family
   yum:
     name: python38
     state: latest
