--- a/roles/clearml-server/tasks/install_nginx.yml
+++ b/roles/clearml-server/tasks/install_nginx.yml
@@ -26,8 +26,8 @@
 ## Create config file
 - name: configure ssl for nginx
   template:
-    src: deafult.j2
-    dest: /etc/nginx/sites-available/{{ your_domain }};
+    src: default.j2
+    dest: /etc/nginx/sites-available/{{ your_domain }}
     owner: "{{ nginx_user }}"
     group: "{{ nginx_user }}"
     mode: 0644
