--- a/roles/clearml-agent/tasks/install_debian.yml
+++ b/roles/clearml-agent/tasks/install_debian.yml
@@ -44,7 +44,7 @@
   debug:
     msg: Performing restart!!!
   notify:
-    - reload systemd
+    - reload service
     - restart clearml
   when: clearmlconfig.changed or clearmlservice.changed
 
