--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,8 @@ remote_user = chris
 host_key_checking = false
 inventory = inventory
 roles_path = ./roles
+private_key_file = ~/.ssh/id_rsa
+vault_password_file = ./.vault-pass
 
 [privilege_escalation]
 become = True
