--- a/roles/clearml-server/tasks/config_server.yml
+++ b/roles/clearml-server/tasks/config_server.yml
@@ -1,39 +1,20 @@
 ---
-
-- name: create directory if they don't exist
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: 1001
-    group: 1001
-    mode: 0775
-  loop:
-    - /opt/clearml/data/mongo/db
-    - /opt/clearml/data/mongo/configdb
-    - /opt/clearml/data/redis
-    - /opt/clearml/logs
-    - /opt/clearml/config
-    - /opt/clearml/data/fileserver
-
 ## Create iuser in config file
 - name: configure authentication and create users
   template:
     src: apiserver.conf.j2
     dest: /opt/clearml/config/apiserver.conf
-    owner: "{{ clearml_user }}"
-    group: "{{ clearml_user }}"
+    owner: 1000
+    group: 1000
     mode: 0644
   register: clearmlconfig
 
-## Restart clearml when config is updated
-- name: Restart services
-  docker_compose:
-    project_src: /opt/clearml
-    build: no
-    restarted: yes
+## Restart clearml-agent service when config or service update
+- name: Restart clearml-service server
+  debug:
+    msg: Performing restart!!!
+  notify:
+    - reload service
+    - restart service
   when: clearmlconfig.changed
-  register: output
-
-- debug:
-    var: output
 
