--- a/roles/clearml-server/tasks/install_nginx.yml
+++ b/roles/clearml-server/tasks/install_nginx.yml
@@ -3,12 +3,13 @@
 # SOURCE: 
 # https://giters.com/allegroai/clearml-server/issues/78
 # https://snapcraft.io/docs/installing-snap-on-debian
-- name: Upgrade all packages to the latest version
-  apt:
-    name: "*"
-    state: latest
 
-- name: install nginx and snapd
+- name: Update all packages to their latest version
+  apt:
+    update_cache: yes
+    upgrade: dist
+
+- name: install nginx and openssl
   apt:
     pkg:
       - openssl
